--- a/src/sass/components/TimeInput.scss
+++ b/src/sass/components/TimeInput.scss
@@ -4,9 +4,10 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 1.2rem;
 
   &__input {
+    padding: 1rem;
     font-size: 1.5rem;
     border-radius: 100px;
     outline: none;
@@ -16,8 +17,11 @@
     width: 10rem;
 
     &:focus {
-      transform: scaleX(1.2);
-      box-shadow: 0 0 10px rgb(129, 122, 122);
+      box-shadow: 0 0 3px 1px rgb(170, 164, 164);
     }
+  }
+
+  .note {
+    font-size: 1rem;
   }
 }
