--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,5 +2,6 @@
 @import "./components/Planets";
 @import "./components/SideBar";
 @import "./components/PlanetInfoLink";
-@import "./components/TimeInput.scss";
+@import "./components/TimeInput";
 @import "./components/variables";
+@import "./components/PlanetInforCard";
