--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
+@import "./settings";
 @import "./base";
 @import "./components/Planets";
 @import "./components/SideBar";
 @import "./components/PlanetInfoLink";
 @import "./components/TimeInput";
-@import "./components/variables";
 @import "./components/PlanetInforCard";
