--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -3,7 +3,7 @@
 }
 html {
   font-size: 62.5%;
-  // overflow: hidden;
+  overflow: hidden;
   @media only screen and (max-width: 900px) {
     font-size: 50%;
   }
