--- a/src/sass/components/_PlanetInfoLink.scss
+++ b/src/sass/components/_PlanetInfoLink.scss
@@ -1,9 +1,23 @@
 .planet-info-link {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
-  font-size: 1.4rem;
+  font-size: 2rem;
+  padding: 0rem 2rem;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 1rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(48, 47, 47, 0.404);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $line-color;
+    outline: 1px solid lighten($line-color, 50%);
+  }
 }
 
 .planet-list {
