--- a/src/sass/components/_PlanetInforCard.scss
+++ b/src/sass/components/_PlanetInforCard.scss
@@ -4,19 +4,16 @@
   flex-direction: column;
   align-items: center;
   font-size: 1rem;
-  //   transition: all 2s;
   animation: fadeIn 1s ease;
   border: 1px solid $line-color;
   padding: 2rem;
-  position: absolute;
-  top: 1%;
-  right: 1%;
 
   box-shadow: 0 0 10px 2px rgb(252, 81, 81);
 
   &__header {
     display: flex;
     align-items: center;
+    padding-left: 0;
     margin-bottom: 1rem;
 
     &__image {
