--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -10,13 +10,20 @@ html {
   @media only screen and (max-width: 750px) {
     font-size: 40%;
   }
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 600px) {
     font-size: 30%;
+  }
+  @media only screen and (max-width: 450px) {
+    font-size: 25%;
+  }
+  @media only screen and (max-width: 400px) {
+    font-size: 20%;
   }
 }
 
 body {
   color: rgba(175, 166, 166, 0.986);
+  overflow: hidden;
   height: 100vh;
   width: 100%;
   font-family: sans-serif;
@@ -27,4 +34,5 @@ body {
 .App {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
