--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -1,2 +1,4 @@
 $line-color: rgba(177, 171, 171, 0.219);
 $--one-year: 10000ms;
+$text-color: rgba(175, 166, 166, 0.986);
+$bg-color: rgb(34, 30, 30);
