--- a/src/sass/components/_PlanetInfoLink.scss
+++ b/src/sass/components/_PlanetInfoLink.scss
@@ -24,13 +24,21 @@
   list-style-type: none;
   padding-inline-start: 0%;
 
+  @media only screen and (max-width: 600px) {
+    padding: 0rem 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+
   li {
     display: flex;
     align-items: center;
-
     margin-top: 1rem;
     transition: all 0.2s ease;
     cursor: pointer;
+    @media only screen and (max-width: 600px) {
+      margin: 0 0.5rem 0 0;
+    }
 
     &:hover {
       transform: scale(1.1);
