--- a/src/sass/components/_Planets.scss
+++ b/src/sass/components/_Planets.scss
@@ -3,6 +3,9 @@
   height: 100vh;
   width: 100%;
   position: relative;
+  @media only screen and (max-width: 600px) {
+    height: 50vh;
+  }
 
   & > * {
     position: absolute;
@@ -12,6 +15,9 @@
     border: 1px solid $line-color;
     border-radius: 50%;
     transition: all 0.2s;
+    @media only screen and (max-width: 600px) {
+      top: 50%;
+    }
 
     &:hover {
       box-shadow: 0px 0px 7px white;
@@ -140,6 +146,9 @@
   background-size: cover;
   animation: Rotation 3s linear infinite;
   box-shadow: 0px 0px 20px rgb(235, 238, 59);
+  @media only screen and (max-width: 600px) {
+    top: 50%;
+  }
 }
 @keyframes Rotation {
   from {
