--- a/src/sass/components/_SideBar.scss
+++ b/src/sass/components/_SideBar.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   padding: 5rem 2rem;
-  width: 30%;
+  @media only screen and (max-width: 600px) {
+    width: 100%;
+  }
   max-height: 100vh;
 }
