--- a/src/sass/components/_PlanetInfoLink.scss
+++ b/src/sass/components/_PlanetInfoLink.scss
@@ -9,11 +9,9 @@
   &::-webkit-scrollbar {
     width: 1rem;
   }
-
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(48, 47, 47, 0.404);
   }
-
   &::-webkit-scrollbar-thumb {
     background-color: $line-color;
     outline: 1px solid lighten($line-color, 50%);
@@ -23,6 +21,7 @@
 .planet-list {
   list-style-type: none;
   padding-inline-start: 0%;
+  height: auto;
 
   @media only screen and (max-width: 600px) {
     padding: 0rem 1rem;
