--- a/src/sass/components/_Planets.scss
+++ b/src/sass/components/_Planets.scss
@@ -38,7 +38,7 @@
   color: wheat;
   width: 70rem;
   height: 70rem;
-  animation: Rotation (165 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .neptun {
@@ -46,26 +46,26 @@
   height: 5rem;
   background: url(../../PlanetSVG/neptune.svg);
   background-size: cover;
-  animation: Rotation 10s linear infinite;
+  animation: Rotation $--one-day * 7 / 10 linear infinite;
 }
 
 .planets__uranus-orbit {
   width: 60rem;
   height: 60rem;
-  animation: Rotation (84 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .uranus {
   width: 3rem;
   height: 3rem;
   background: url(../../PlanetSVG/uranus.svg);
-  animation: Rotation 5s linear infinite;
+  animation: Rotation $--one-day * 7 / 10 linear infinite;
   background-size: cover;
 }
 .planets__saturn-orbit {
   width: 50rem;
   height: 50rem;
-  animation: Rotation (29 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .saturn {
@@ -73,12 +73,12 @@
   height: 5rem;
   background: url(../../PlanetSVG/saturn.svg);
   background-size: cover;
-  animation: Rotation 5s linear infinite;
+  animation: Rotation $--one-day * 45 / 100 linear infinite;
 }
 .planets__jupiter-orbit {
   width: 40rem;
   height: 40rem;
-  animation: Rotation (12 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .jupiter {
@@ -86,12 +86,12 @@
   height: 5.7rem;
   background: url(../../PlanetSVG/jupiter.svg);
   background-size: cover;
-  animation: Rotation 5s linear infinite;
+  animation: Rotation $--one-day * 4 / 10 linear infinite;
 }
 .planets__mars-orbit {
   width: 30rem;
   height: 30rem;
-  animation: Rotation (2 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .mars {
@@ -99,24 +99,24 @@
   height: 2rem;
   background: url(../../PlanetSVG/mars.svg);
   background-size: cover;
-  animation: Rotation 9s linear infinite;
+  animation: Rotation $--one-day linear infinite;
 }
 .planets__earth-orbit {
   width: 20rem;
   height: 20rem;
-  animation: Rotation $--one-year linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .earth {
   width: 0.55rem;
   height: 0.55rem;
   background: url(../../PlanetSVG/earth.svg) 0 / auto 100%;
-  animation: Rotation 5s linear infinite;
+  animation: Rotation $--one-day linear infinite;
 }
 .planets__venus-orbit {
   width: 15rem;
   height: 15rem;
-  animation: Rotation (2 / 3 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .venus {
@@ -124,12 +124,12 @@
   height: 0.5rem;
   background: url(../../PlanetSVG/venus.svg);
   background-size: cover;
-  animation: Rotation 5s linear infinite;
+  animation: Rotation $--one-day * 243 linear infinite;
 }
 .planets__mercury-orbit {
   width: 12rem;
   height: 12rem;
-  animation: Rotation (1 / 4 * $--one-year) linear infinite;
+  animation: Rotation linear infinite;
 }
 
 .mercury {
@@ -137,7 +137,7 @@
   height: 0.2rem;
   background: url(../../PlanetSVG/mercury.svg);
   background-size: cover;
-  animation: Rotation 2s linear infinite;
+  animation: Rotation 60 * $--one-day linear infinite;
 }
 .sun {
   width: 9rem;
