--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -1,4 +1,5 @@
 $line-color: rgba(177, 171, 171, 0.219);
 $--one-year: 10000ms;
+$--one-day: 10s;
 $text-color: rgba(175, 166, 166, 0.986);
 $bg-color: rgb(34, 30, 30);
