--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,15 +4,16 @@
 html {
   font-size: 62.5%;
   overflow: hidden;
-  @media only screen and (max-width: 950px) {
+  @media only screen and (max-width: 1035px) {
     font-size: 50%;
   }
-  @media only screen and (max-width: 750px) {
+  @media only screen and (max-width: 830px) {
     font-size: 40%;
   }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 660px) {
     font-size: 30%;
     overflow: auto;
+    overflow-x: hidden;
   }
   @media only screen and (max-width: 450px) {
     font-size: 25%;
