--- a/src/sass/components/_SideBar.scss
+++ b/src/sass/components/_SideBar.scss
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 5rem 2rem;
-  @media only screen and (max-width: 600px) {
-    width: 100%;
+  height: 100vh;
+  @media only screen and (max-width: 830px) {
+    height: 80vh;
   }
-  max-height: 100vh;
+  @media only screen and (max-width: 660px) {
+    height: 50vh;
+  }
 }
