responsive small change

--- a/src/sass/components/_PlanetInforCard.scss
+++ b/src/sass/components/_PlanetInforCard.scss
@@ -6,7 +6,7 @@
   font-size: 1rem;
   animation: fadeIn 1s ease;
   border: 1px solid $line-color;
-  padding: 2rem;
+  padding: 2rem 0.5rem;
 
   box-shadow: 0 0 10px 2px rgb(252, 81, 81);
 
